feat: add adaptive

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                             <a href="http://vk.com/goodbish">vk.com</a>  <br>
                             <a href="tg://resolve?domain=Bannikov_Daniil">telegram</a>  <br>
                             <a href="mailto:goodbish@mail.ru">e-mail</a> <br>
-                            <!-- location -->
+                            <span class='purple'>location</span>
                         </div>
                         <div class="head__left__contacts__right">
                             <a href="http://vk.com/goodbish">goodbish</a>  <br>
                             <a href="tg://resolve?domain=Bannikov_Daniil">+7 922 320 86 50</a>  <br>
                             <a href="mailto:goodbish@mail.ru">goodbish@mail.ru</a> <br>
-                            <!-- Perm  -->
+                            Perm            
                         </div>
                     </div>
                     
@@ -53,7 +53,8 @@
                         <br>
                         <br>
                         My strengths include perseverance, quick learning, and a thirst for new things. I have experience in the
-                        company <i>«Информационный центр - АВИС»</i>, where I worked as a layout designer for 1.5 months.
+                        company <i>«Информационный центр - АВИС»</i>, where I worked as a layout designer for 1.5 months. Also worked as
+                        web developer in <i>«X10 - Internet marketing agency»</i> for 2 months
                     </p>
                 </div>
 
@@ -64,6 +65,12 @@
                         <br> <br>
                         <span class="purple">link to code</span> <a href="https://github.com/Goodbish/Website">https://github.com/Goodbish/Website (temporary link)</a> <br>
                         <span class="purple">link to site</span> <a href="https://evgenya.azurewebsites.net/">https://evgenya.azurewebsites.net/ (temporary link)</a>
+                        <br> <br>
+                        Web application within the course "Rolling scopes", which show date, time, weather and remembers the entered data, even after leaving the site. <br> <br>
+                        <span class="purple">link to application</span> <a href="https://rolling-scopes-school.github.io/goodbish-JS2020Q3/momentum/">https://rolling-scopes-school.github.io/goodbish-JS2020Q3/momentum/</a>
+                        <br> <br>
+                        Site layout within the course "Rolling scopes", which is adaptive, has animations and some js. <br> <br>
+                        <span class="purple">link to site</span> <a href="https://rolling-scopes-school.github.io/goodbish-JS2020Q3/shelter/pages/main/main.html">https://rolling-scopes-school.github.io/goodbish-JS2020Q3/shelter/</a>
                     </p>
                 </div>
 
